--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,7 +1,23 @@
-h1{
-    color:black;
+h1 {
+    color: black;
+    text-align: center;
 }
 
-body{
+body {
     background-color: lightcyan;
+}
+
+table, th, td {
+    border: 1px solid;
+    padding: 5px;
+}
+
+table {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
 }
